--- a/pawws-back/package.json
+++ b/pawws-back/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
+    "cors": "^2.8.5",
     "express": "^4.16.3",
     "express-validator": "^5.3.0",
     "path": "^0.12.7"
