--- a/pawws-back/.eslintrc
+++ b/pawws-back/.eslintrc
@@ -43,6 +43,7 @@
         "no-unused-expressions": "error",
         "chai-friendly/no-unused-expressions": "error",
         "prefer-arrow-callback": "error",
-        "no-multiple-empty-lines": ["error", { "max": 1 }]
+        "no-multiple-empty-lines": ["error", { "max": 1 }],
+        "radix": 0
     }
 }
