--- a/pawws-back/package.json
+++ b/pawws-back/package.json
@@ -22,6 +22,8 @@
     "cors": "^2.8.5",
     "express": "^4.16.3",
     "express-validator": "^5.3.0",
+    "mongodb": "^3.1.9",
+    "morgan": "^1.9.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
@@ -40,6 +42,8 @@
     "eslint-plugin-json": "^1.2.1",
     "jest": "^23.6.0",
     "mongoose": "^5.2.17",
+    "sinon": "^7.1.1",
+    "sinon-chai": "^3.2.0",
     "supertest": "^3.3.0"
   }
 }
