--- a/pawws-back/package.json
+++ b/pawws-back/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-json": "^1.2.1",
     "jest": "^23.6.0",
     "mongoose": "^5.2.17",
+    "nodemon": "^1.18.9",
     "sinon": "^7.1.1",
     "sinon-chai": "^3.2.0",
     "supertest": "^3.3.0"
